# qtlib-QtWebsockets

./: CMakeLists.txt
example/qtwebsocketsdemo/: CMakeLists.txt  resource.qrc
example/qtwebsocketsdemo/android/: AndroidManifest.xml  calm.keystore
example/qtwebsocketsdemo/android/res/: color.xml
example/qtwebsocketsdemo/android/res/drawable/: m_splash.xml
example/qtwebsocketsdemo/android/res/values/: sytle.xml
example/qtwebsocketsdemo/android/src/ca/calm/qtwebsocketsdemo/: qtwebsocketsdemo.java
example/qtwebsocketsdemo/include/qtandroidcls/: qtandroidcls.h
example/qtwebsocketsdemo/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
output/include/QtWebsockets/: qdefaultmaskgenerator_p.h  qmaskgenerator.h  qwebsocket.h  qwebsocketprotocol.h  qwebsocketprotocol_p.h
output/lib/win32msvc/QtWebsockets/: QtWebsockets.lib
script/: package.py
src/: qsslserver.cpp  qwebsocket_p.cpp  qwebsocketcorsauthenticator.h  qwebsocketserver.h
